tests/errors/tc_expr_cast_void.lx
@module "main"

const foo -> fn () void {}

pub const main -> fn () int {
    let x: int = cast<int>(foo);
    return 0;
}
